tests/org.eclipse.php.core.tests/src/org/eclipse/php/core/tests/errors/PHP5ErrorReportingTests#getPHPVersion().mjava
	@Override
	protected PHPVersion getPHPVersion() {
		return PHPVersion.PHP5;
	}

